--- a/templates/standard_widgets.html
+++ b/templates/standard_widgets.html
@@ -246,13 +246,14 @@
 </x:define>
 
 <x:define controller="Tree" title="Tree">
-	<view>
-		<div x:type="view" x:resource_id="$tree.MAIN_TREE_CONTAINER">
-			{$foreach($tree.records) as=node}
+	<template>
+		<div x:type="container" x:resource_id="$tree.MAIN_TREE_CONTAINER">
+			{#foreach($tree.records) as=node}
+				<x:roles>$tree.root_nodes_foreach</x:roles>{*<!--role handler creates refresher-->*}
 				{>$tree.node}
 			{/foreach}
 		</div>
-	</view>
+	</template>
 	<assign name="pad">''</assign>
 	<assign name="level">0</assign>
 	<include name="node">
@@ -269,14 +270,14 @@
 		*}<i class="lava-tree-expander" x:type="view"
 			x:event:click="$tree.node_click(node)"
 			x:classes="'lava-tree' + ((foreach_index == @parent->count - 1) ? '-bottom' : '-middle')
-				+ (node.children.length ? ($tree{is_expanded} ? '-expanded' : '-collapsed') : '-node')"></i>
+				+ ($tree{is_expandable} ? ($tree{is_expanded} ? '-expanded' : '-collapsed') : '-node')"></i>
 		{>$tree.icon}
 		{>$tree.node_title}
 	</include>
 	<include name="icon"></include>
 	<include name="node_children">
 		{$if(node.children.length && $tree{is_expanded})}
-			<x:roles>$tree.node_children_view</x:roles>
+			<x:roles>$tree.node_children_view</x:roles>{*<!--role handler creates refresher-->*}
 			<x:container_config>
 				{
 					type: "Emulated",
@@ -285,16 +286,15 @@
 					}
 				}
 			</x:container_config>
-			<x:assign name="pad">
-				{literal:}
-					(foreach_index == count - 1)
-						? pad + '<div class="lava-tree-pad"></div>'
-						: pad + '<div class="lava-tree-pad-line"></div>'
-				{:literal}
-			</x:assign>
+			<script x:equiv="x:assign" type="lava/expression" name="pad">
+				(foreach_index == count - 1)
+					? pad + '<div class="lava-tree-pad"></div>'
+					: pad + '<div class="lava-tree-pad-line"></div>'
+			</script>
 			<x:assign name="level">@parent->level + 1</x:assign>
 			<div x:type="container" class="lava-tree-container">
 				{#foreach(node.children) as=node}
+					<x:roles>$tree.nodes_foreach</x:roles>{*<!--role handler creates refresher-->*}
 					{>$tree.node}
 				{/foreach}
 			</div>
