--- a/templates/standard_widgets.html
+++ b/templates/standard_widgets.html
@@ -358,7 +358,7 @@
 				{#> row[column.name]}
 			</cell>
 			<cell name="Boolean">
-				{#> translateBoolean(!!row[column.name])}
+				{#> $table.translateBoolean(!!row[column.name])}
 			</cell>
 		</cells>
 	</storage>
