next version - work-in-progress

--- a/templates/standard_widgets.html
+++ b/templates/standard_widgets.html
@@ -459,7 +459,7 @@
 		</table>
 	</include>
 	<resources locale="default">
-		<container path="year_input.TEXT_INPUT_ELEMENT" add_classes="lava-calendar-year-input">
+		<container path="year_input.MAIN_ELEMENT" add_classes="lava-calendar-year-input">
 			<add_properties maxlength="5"></add_properties>
 		</container>
 	</resources>
