next version - work-in-progress

--- a/templates/standard_widgets.html
+++ b/templates/standard_widgets.html
@@ -138,7 +138,7 @@
 				properties: {
 					title: {type: 'template'},
 					content: {type: 'template'},
-					is_expanded: {type: 'lava_type', type_name: 'Boolean', is_attribute: true}
+					is_expanded: {type: 'known_type', type_name: 'Boolean', is_attribute: true}
 				}
 			}
 		}
@@ -199,10 +199,10 @@
 				properties: {
 					title: {type: 'template'},
 					content: {type: 'template'},
-					name: {type: 'lava_type', is_attribute: true, type_name: 'String'},
-					is_enabled: {type: 'lava_type', is_attribute: true, type_name: 'Boolean'},
-					is_hidden: {type: 'lava_type', is_attribute: true, type_name: 'Boolean'},
-					is_active: {type: 'lava_type', is_attribute: true, type_name: 'Boolean'}
+					name: {type: 'known_type', is_attribute: true, type_name: 'String'},
+					is_enabled: {type: 'known_type', is_attribute: true, type_name: 'Boolean'},
+					is_hidden: {type: 'known_type', is_attribute: true, type_name: 'Boolean'},
+					is_active: {type: 'known_type', is_attribute: true, type_name: 'Boolean'}
 				}
 			}
 		}
